cmake_minimum_required(VERSION 2.6.0)

# here we specify that the project is C language only, so the default
# C compiler on the system will be used

project(myprogram C)
include_directories( ./ )
add_executable(myprogram
        test/old/bbList_testSortElement.c
        engine/logic/bbArith.h
        engine/logic/bbBloatedPool.c
        engine/logic/bbBloatedPool.h
        engine/logic/bbDictionary.c
        engine/logic/bbDictionary.h
        engine/logic/bbLeanPool.c
        engine/logic/bbLeanPool.h
        engine/logic/bbList.c
        engine/logic/bbScatter.h
        engine/logic/bbTree.c
        engine/logic/bbTree.h
        engine/logic/bbVPool.c
        test/old/bbConstants_test.c
        test/old/bbFloorDivision_test.c
        test/old/bbList_test.c
        test/old/bbList_testInsert.c
        test/old/bbList_testMerge.c
        test/old/bbList_testSort.c
        test/old/bbList_testSortedInsert.c
        test/old/bbList_testSplit.c
        test/old/bbRoundUp_test.c
        test/old/bbTerminal_test.c
        test/old/bbTree_test.c
        test/old/bbVPool_test.c
        test/old/dowhile_test.c
        engine/logic/bbList_iterate.c
        test/old/bbList_testIterate.c
        engine/graphics/bbTextures.h
        engine/graphics/bbTextures.c
        engine/logic/bbPrime.h
        test/old/bbPrime_test.c
        engine/graphics/bbSprites.c
        engine/graphics/bbAnimation.h
        engine/graphics/bbAnimation.c
        engine/graphics/bbDrawfunctions.h
        engine/graphics/bbComposition.h
        engine/graphics/bbComposition.c
        engine/widgets/bbWidget.h
        engine/graphics/bbGraphics.h
        engine/graphics/bbDrawfunctions.c
        engine/geometry/bbCoordinates.h
        engine/geometry/bbCoordinates.c
        test/Incremental_test.c
        engine/logic/bbTree.c
        engine/logic/bbList_map.c
        engine/widgets/bbWidget.c
        engine/userinterface/bbInput.h
        engine/userinterface/bbInput.c
        engine/viewport/bbViewport.h
        engine/viewport/bbViewport.c
        engine/graphics/bbColours.c
        test/old/bbListList.c
        test/old/bbList_pushpop.c
        engine/logic/bbNestedList.h
        engine/logic/bbNestedList.c
        test/old/bbListList_test.c
        test/old/bbListList_map_test.c
        engine/geometry/bbViewportCoords.h
        test/old/automorphicNumbers.c
        games/game0/maps/map0/widgets/nullfunctions.h
        engine/widgets/bbWidgetFunctions.c
        games/game0/maps/map0/widgets/sphere.h
        engine/userinterface/bbMouse.c
        games/game0/maps/map0/widgets/button.h
        engine/userinterface/bbMouseFunctions.c
        engine/geometry/bbViewportCoords.c
        games/game0/maps/map0/mouse/button.h
        games/game0/maps/map0/mouse/card.h
        games/game0/maps/map0/widgets/spellbar.h
        games/game0/maps/map0/widgets/widgets.c
        games/game0/maps/map0/widgets/currentspell.h
        games/game0/maps/map0/mouse/spellmenu.h
        games/game0/maps/map0/mouse/mouse.h
        engine/userinterface/bbSpells.c
        engine/userinterface/bbSpell.c
        engine/data/bbHome.h
        games/game0/maps/map0/spells/spell1.h
        engine/dummyserver/bbDummySender.c
        engine/dummyserver/bbDummyReceiver.h
        engine/dummyserver/bbDummyReceiver.c
        engine/viewport/bbDrawables.h
        engine/viewport/bbDrawables.c
        engine/viewport/bbMapIcons.c
        test/old/bbList_testRemove.c
        games/game0/maps/map0/drawfunctions/drawfunctions.c
        games/game0/maps/map0/drawfunctions/drawablesprite.h)
