cmake_minimum_required(VERSION 4.1)

# This file is not used to compile the source, only used for reference in CLion

project(myprogram C)
include_directories( ./ )


add_executable(myprogram
        ./WinLibs/System_test.c
        ./games/game0/maps/map0/spells/spells.c
        ./games/game0/maps/map0/widgets/widgets.c
        ./games/game0/maps/map0/drawfunctions/drawfunctions.c
        ./games/game0/maps/map0/mouse/mouse.c
        ./games/game0/maps/map0/spawner.c
        ./test/pool_speed_test.c
        ./test/bbNetworkApp_test.c
        ./test/bbNetwork_packet_test.c
        ./test/bbCallback_test.c
        ./test/bbNetworkTime_test.c
        ./test/sizes_test.c
        ./test/bbThreadedQueue_search_test.c
        ./test/bbNetwork_asynchTest.c
        ./test/bbThreadedQueue_test2.c
        ./test/hello_world.c
        ./test/bbStr_toI32_test.c
        ./test/old/bbNetwork_test2.c
        ./test/old/bbList_testIterate.c
        ./test/old/bbList_test.c
        ./test/old/bbList_testInsert.c
        ./test/old/bbList_testSort.c
        ./test/old/automorphicNumbers.c
        ./test/old/bbConstants_test.c
        ./test/old/bbListList_map_test.c
        ./test/old/bbListList_test.c
        ./test/old/bbVPool_test.c
        ./test/old/bbList_testSortedInsert.c
        ./test/old/bbDumbServer_test.c
        ./test/old/bbVPool_printHeader_test.c
        ./test/old/dowhile_test.c
        ./test/old/bbList_testSplit.c
        ./test/old/bbTree_test.c
        ./test/old/bbRoundUp_test.c
        ./test/old/bbPrime_test.c
        ./test/old/bbDictionary_test.c
        ./test/old/bbList_pushpop.c
        ./test/old/bbList_testSortElement.c
        ./test/old/bbFloorDivision_test.c
        ./test/old/bbList_testRemove.c
        ./test/old/bbTerminal_test.c
        ./test/old/bbList_testMerge.c
        ./test/old/bbListList.c
        ./test/bbNetwork_test.c
        ./test/bbCore_test.c
        ./test/bbThreadedPool_test.c
        ./test/incremental_test.c
        ./test/bbThreadedQueue_test.c
        ./test/get_line_test.c
        ./test/bbServer_test.c
        ./engine/graphics/bbFonts.c
        ./engine/graphics/bbAnimation.c
        ./engine/graphics/bbComposition.c
        ./engine/graphics/bbSprites.c
        ./engine/graphics/bbTextures.c
        ./engine/graphics/bbColours.c
        ./engine/graphics/bbDrawfunctions.c
        ./engine/graphics/bbGraphicsApp.c
        ./engine/core/bbInstruction.c
        ./engine/core/bbCoreInputs.c
        ./engine/core/bbMoveable.c
        ./engine/core/bbCore.c
        ./engine/geometry/bbCoordinates.c
        ./engine/geometry/bbViewportCoords.c
        ./engine/geometry/bbMesh.c
        ./engine/viewport/bbViewportApp.c
        ./engine/viewport/bbDrawables.c
        ./engine/viewport/bbMapIcons.c
        ./engine/viewport/bbUnits.c
        ./engine/viewport/bbViewport.c
        ./engine/server/bbServer.c
        ./engine/network/bbNetworkTime.c
        ./engine/network/bbNetworkPacket.c
        ./engine/network/bbNetworkApp.c
        ./engine/network/bbNetwork.c
        ./engine/network/old/bbNetwork.c
        ./engine/logic/bbDictionary.c
        ./engine/logic/bbTree.c
        ./engine/logic/bbLeanPool.c
        ./engine/logic/bbList_map.c
        ./engine/logic/bbBloatedPool.c
        ./engine/logic/bbVPool.c
        ./engine/logic/bbNestedList.c
        ./engine/logic/bbList_sort.c
        ./engine/logic/bbCircularBuffer.c
        ./engine/logic/bbList.c
        ./engine/logic/bbList_iterate.c
        ./engine/userinterface/bbInput.c
        ./engine/userinterface/bbSpells.c
        ./engine/userinterface/bbUIApp.c
        ./engine/userinterface/bbMouseFunctions.c
        ./engine/userinterface/bbSpell.c
        ./engine/userinterface/bbWidgetFunctions.c
        ./engine/userinterface/bbWidget.c
        ./engine/userinterface/bbMouse.c
        ./engine/avoidance/bbAvoidables.c
        ./engine/threadsafe/bbThreadedQueue.c
        ./engine/threadsafe/bbThreadedPool.c
        ./engine/threadsafe/bbThreadedQueue_search.c
        ./engine/core/bbAgent.c
        games/game0/maps/map0/agents/agents.c
        engine/logic/bbList_getNth.c
        test/bbList_getNth_test.c

)

